tests/invalidTest/other/const_const_unvalid_type8_2.q
# EXPECT type cannot be converted
def void errorType(){
    uint8 a = 257
}